--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -60,7 +60,7 @@
             text-align: center;
             padding: 50px;
             background-color: #ffe6cc;
-            background-image: url('hands.png'); /* Replace with actual background pattern */
+            background-image: url("{{url_for('static', filename='hands.png')}}");
             background-size: cover;
             background-blend-mode: multiply;
             color: #003366;
@@ -100,7 +100,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="family.png" alt="Connecting Futures Logo"> <!-- Replace with your logo -->
+                <img src="{{url_for('static', filename='family.png')}}" alt="Connecting Futures Logo"> <!-- Replace with your logo -->
             <h1>Connecting Futures</h1>
         </div>
         <nav class="nav">
