--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connecting Futures</title>
+    <title>PisaCare</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -29,6 +29,7 @@
         .nav {
             display: flex;
             gap: 20px;
+            padding-top: 20px;
         }
         .nav a {
             text-decoration: none;
@@ -56,6 +57,13 @@
             opacity: 1;
             transform: scaleX(1);
         }
+        .divider {
+            height: 1px;
+            background-color: #ddd;
+            margin: 20px;
+            width: 100%;
+        }
+
         .banner {
             text-align: center;
             padding: 50px;
@@ -100,17 +108,22 @@
 <body>
     <header class="header">
         <div class="logo">
-                <img src="{{url_for('static', filename='family.png')}}" alt="Connecting Futures Logo"> <!-- Replace with your logo -->
-            <h1>Connecting Futures</h1>
+                <img src="{{url_for('static', filename='family.png')}}" alt="PisaCare Logo"> <!-- Replace with your logo -->
+            <h1>PisaCare</h1>
         </div>
+
         <nav class="nav">
-            <a href="#">Youth Employment</a>
-            <a href="#">Cogs & Capers</a>
-            <a href="#">Careers</a>
-            <a href="#">About</a>
+            <a href="#">Appoinment</a>
             <a href="#">Contact</a>
+            <a href="#">Analysis results</a>
+            <a href="#">About</a>
         </nav>
     </header>
+
+    <nav class="nav">
+        <a href="#">Subscription</a>
+    </nav>
+
     <section class="banner">
         <h1>Youth Employment</h1>
         <p>Regional Victoria - Loddon Mallee (head office Bendigo) & Hume.<br>
