adds changes to website

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -60,6 +60,11 @@
         .orange-line {
             height: 5px;
             background-color: orange;
+        }
+        .divider {
+            height: 1px;
+            background-color: #ddd;
+            margin-top: 20px;
             width: 100%;
             margin: 0;
         }
@@ -174,9 +179,15 @@
             <a href="#">Analysis results</a>
             <a href="#">About</a>
             <a href="#">Subscription</a>
+            <a href="cardInformation.html">Card information</a>
+            <a href="subscription.html">Subscription</a>
         </nav>
+        
     </header>
     <div class="orange-line"></div> <!-- Horizontal orange line -->
+
+    <div class="divider"></div>
+    
     <section class="banner">
         <div class="content-wrapper">
             <!-- Left: Illustration -->
