adds integration with flask

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -178,9 +178,8 @@
             <a href="#">Contact</a>
             <a href="#">Analysis results</a>
             <a href="#">About</a>
-            <a href="#">Subscription</a>
-            <a href="cardInformation.html">Card information</a>
-            <a href="subscription.html">Subscription</a>
+            <a href="cardInformation">Card information</a>
+            <a href="subscription">Subscription</a>
         </nav>
         
     </header>
