adds main menu text and image

--- a/app/templates/display_cards.html
+++ b/app/templates/display_cards.html
@@ -123,10 +123,8 @@
             </a>
         </div>
         <nav class="nav">
-            <a href="#">Appoinment</a>
-            <a href="#">About</a>
-            <a href="display_cards">My Cards</a>
-            <a href="cardInformation">Card information</a>
+            <a href="display_cards">My cards</a>
+            <a href="cardInformation">Add new card</a>
             <a href="subscription">Subscription</a>
         </nav>
     </header>
