--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -240,10 +240,8 @@
         </div>
 
         <nav class="nav">
-            <a href="#">Appoinment</a>
-            <a href="#">About</a>
-            <a href="display_cards">My Cards</a>
-            <a href="cardInformation">Card information</a>
+            <a href="display_cards">My cards</a>
+            <a href="cardInformation">Add new card</a>
             <a href="subscription">Subscription</a>
         </nav>
         
@@ -261,10 +259,10 @@
     
             <!-- Right: Text Content -->
             <div class="text-content">
-                <h1>Youth Employment</h1>
-                <p>Regional Victoria - Loddon Mallee (head office Bendigo) & Hume.<br>
-                   Queensland - Sunshine Coast<br>
-                   New South Wales - Murray, Riverina Region, Hunter Valley & Central Coast</p>
+                <h1>Voice remote</h1>
+                <p>Now you can make all the features on our website simply<br>
+                    and quickly. Press the voice button and ask our guide<br>
+                    what action you want to do, without any navigation.</p>
     
                 <!-- Mic button wrapped in a div to ensure proper centering -->
                 <div class="mic-button-wrapper">
